--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "nokia-ai-backend",
   "version": "1.0.0",
+  "description": "Lightweight AI backend for Nokia Hub",
   "type": "module",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
+  },
+  "engines": {
+    "node": ">=18"
   },
   "dependencies": {
     "express": "^4.18.2",
